--- a/Service/Dockerfile
+++ b/Service/Dockerfile
@@ -3,4 +3,4 @@ ADD . /src
 WORKDIR /src
 RUN gradle jar -DskipTests
 RUN gradle bootJar
-ENTRYPOINT ["java","-jar","build/libs/BotHandler-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","build/libs/Service-0.0.1-SNAPSHOT.jar"]
