--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,18 +24,34 @@ services:
       dockerfile: Dockerfile
     image: bothandler
     restart: always
-    depends_on:
-      - postgres
-      - rabbitmq
     env_file: "vars_spring.env"
+    develop:
+      watch:
+        - path: BotHandler/src
+          action: rebuild
+        - path: BotHandler/build.gradle.kts
+          action: rebuild
+        - path: BotHandler/settings.gradle.kts
+          action: rebuild
+        - path: BotHandler/Dockerfile
+          action: rebuild
   service:
     build:
       context: /Service/
       dockerfile: Dockerfile
     image: service
     restart: always
-    depends_on:
-      - postgres
-      - rabbitmq
-      - bot_handler
     env_file: "vars_spring.env"
+    ports:
+      - 8080:8080
+    develop:
+      watch:
+        - path: Service/src
+          action: rebuild
+        - path: Service/build.gradle.kts
+          action: rebuild
+        - path: Service/settings.gradle.kts
+          action: rebuild
+        - path: Service/Dockerfile
+          action: rebuild
+   
