Add Telgram Bot Template & second compose configuration

--- a/BotHandler/Dockerfile
+++ b/BotHandler/Dockerfile
@@ -1,6 +1,4 @@
-FROM gradle:jdk17-corretto
-ADD . /src
-WORKDIR /src
-RUN gradle jar -DskipTests
-RUN gradle bootJar
-ENTRYPOINT ["java","-jar","build/libs/BotHandler-0.0.1-SNAPSHOT.jar"]
+FROM amazoncorretto:23.0.2-al2023
+ADD build/libs/BotHandler-0.0.1-SNAPSHOT.jar /app/
+WORKDIR /app
+ENTRYPOINT ["java","-jar","BotHandler-0.0.1-SNAPSHOT.jar"]
