--- a/Service/Dockerfile
+++ b/Service/Dockerfile
@@ -1,6 +1,4 @@
-FROM gradle:jdk17-corretto
-ADD . /src
-WORKDIR /src
-RUN gradle jar -DskipTests
-RUN gradle bootJar
-ENTRYPOINT ["java","-jar","build/libs/Service-0.0.1-SNAPSHOT.jar"]
+FROM amazoncorretto:23.0.2-al2023
+ADD build/libs/Service-0.0.1-SNAPSHOT.jar /app/
+WORKDIR /app
+ENTRYPOINT ["java","-jar","Service-0.0.1-SNAPSHOT.jar"]
